<resources>
    <string name="app_name">ERS_v.0.0.1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_e_mail_address">Enter E-mail Address</string>
    <string name="enter_phone_numebr">Enter Phone Numebr</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="register_here">Register Here</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="email_address">email address</string>
    <string name="none">Username</string>

</resources>
